--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<% include ../partials/header.ejs %>
+  <% include ../partials/header.ejs %>
 </head>
+
 <body>
   <div class="container">
     <div>
       <h1>Atostek Oirearviohack</h1>
       <button type="button" class="btn btn-primary">Köh.</button>
+      <button type="button" id="addCough" class="btn btn-primary">Lisää yskää!</button>
+      <button type="button" id="addCoughToHML" class="btn btn-primary">Yskää Vanajanlinnaan!</button>
+      <div id="googleMap" style="width:100%;height:600px;"></div>
     </div>
   </div>
+
+
+
 </body>
+
 </html>
