--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,9 +9,10 @@
   <div class="container">
     <div>
       <h1>Atostek Oirearviohack</h1>
-      <button type="button" class="btn btn-primary">Köh.</button>
-      <button type="button" id="addCoughToHML" class="btn btn-primary">Yskää Vanajanlinnaan!</button>
-      <div id="googleMap" style="width:100%;height:600px;"></div>
+      <div id="floating-panel">
+        <button type="button" class="btn btn-primary">Köh.</button>
+      </div>
+      <div id="googleMap"></div>
     </div>
   </div>
 
