Added loading spinner

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,7 @@
     <button type="button" id="addCough" class="btn btn-primary">Köh.</button>
 </div>
 <div id="googleMap"></div>
+<div class="modal"></div>
 
 </body>
 
