Adjusted cough button styles

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 
 <body>
 <div id="floating-panel">
-    <button type="button" id="addCough" class="btn btn-primary">Köh.</button>
+    <button type="button" id="addCough" class="btn btn-danger">Köh.</button>
 </div>
 <div id="googleMap"></div>
 <div class="modal"></div>
